--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "gui/main.rs"
 edition = "2024"
 
 [dependencies]
+confy = "0.6.1"
 eframe = { version = "0.31.1", features = ["default"] }
 egui_commonmark = "0.20.0"
 env_logger = { version = "0.11.7", default-features = false, features = [
@@ -23,5 +24,6 @@ env_logger = { version = "0.11.7", default-features = false, features = [
 log = "0.4.26"
 reqwest = { version = "0.12.14", features = ["blocking", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_derive = "1.0.219"
 strum = "0.27.1"
 strum_macros = "0.27.1"
